--- a/recipes/grilled_cheese.html
+++ b/recipes/grilled_cheese.html
@@ -14,12 +14,14 @@
 
     <img src="../images/grilledcheese.jpg" alt="grilled cheese">
 
-    <h3>Description</h3>
+    <div class="desc">
+        <h3>Description</h3>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe explicabo maxime veritatis asperiores perferendis tempora corrupti corporis praesentium, quidem at aliquid excepturi atque debitis quaerat blanditiis et inventore itaque facere.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe explicabo maxime veritatis asperiores perferendis tempora corrupti corporis praesentium, quidem at aliquid excepturi atque debitis quaerat blanditiis et inventore itaque facere.</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit tempore iste nisi dicta aliquam vitae reprehenderit voluptatem, adipisci, nihil earum voluptate recusandae, fugiat hic voluptatibus? Inventore quam rerum enim ipsam?</p>
-
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit tempore iste nisi dicta aliquam vitae reprehenderit voluptatem, adipisci, nihil earum voluptate recusandae, fugiat hic voluptatibus? Inventore quam rerum enim ipsam?</p>
+    </div>
+    
     <h3>Ingredients</h3>
     <ul>
         <li>White bread</li>
